--- a/src/pages/DTDD/DTDD.scss
+++ b/src/pages/DTDD/DTDD.scss
@@ -1,4 +1,4 @@
-#Home {
+#DTDD {
     padding: 0 160px;
 
     .carousel-top {
@@ -24,5 +24,146 @@
                 height: 90%;
             }
         }
+    }
+
+    .show {
+        display: block;
+    }
+
+    .hide {
+        display: none;
+    }
+
+    .filter_container {
+        .filter_top {
+            .my_btn {
+                border: 1px solid #ccc;
+                margin: 0 5px;
+                cursor: pointer;
+                position: relative;
+
+
+                .brand {
+                    position: absolute;
+                    top: 50px;
+                    left: 0;
+                }
+
+                .price {
+                    position: absolute;
+                    top: 50px;
+                    left: 0;
+                }
+
+                .ram {
+                    position: absolute;
+                    top: 50px;
+                    left: 0;
+                }
+
+                .rom {
+                    position: absolute;
+                    top: 50px;
+                    left: 0;
+                }
+
+                .arrow-filter {
+                    position: absolute;
+                    top: -15px;
+                    left: 20px;
+                    z-index: 4;
+
+                    width: 0;
+                    height: 0;
+                    border-left: 20px solid transparent;
+                    border-right: 20px solid transparent;
+                    border-bottom: 20px solid #fff;
+                }
+
+
+                .i_mg_left {
+                    margin-right: 5px;
+                }
+
+                i {
+                    margin-left: 5px;
+                }
+            }
+        }
+
+        .filter_brand {
+            margin-top: 20px;
+            display: flex;
+            gap: 20px;
+            flex-wrap: wrap;
+
+            .brand-content {
+                z-index: 3;
+                position: relative !important;
+                background-color: #fff;
+                box-shadow: 0 0 20px 10px #ccc;
+                width: 500px;
+                display: flex;
+                gap: 20px;
+                flex-wrap: wrap;
+                padding: 10px;
+            }
+
+            .brand_img {
+                border: 1px solid #ccc;
+                border-radius: 20px;
+                width: 120px;
+                height: 35px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+
+                &:hover {
+                    border-color: blue;
+                }
+
+                img {
+                    width: 90%;
+                }
+            }
+        }
+
+        .filter_bottom {
+            margin-top: 20px;
+
+            .title {
+                margin-bottom: 10px;
+            }
+
+            .content {
+
+                span {
+                    padding: 5px 15px;
+                    margin: 0 5px;
+                    border: 1px solid #ccc;
+                    border-radius: 20px;
+                    cursor: pointer;
+                    text-align: center;
+
+                    &:hover {
+                        border-color: blue;
+                    }
+                }
+            }
+        }
+
+
+    }
+
+    .list_product_phien_ban_day_du,
+    .list_product {
+        border-left: 1px solid #ccc;
+        border-top: 1px solid #ccc;
+        width: 100%;
+        margin: 20px 0;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0px !important;
     }
 }
