--- a/src/pages/DTDD/filters/MainFilter.scss
+++ b/src/pages/DTDD/filters/MainFilter.scss
@@ -3,6 +3,10 @@
     top: 50px;
     left: 0;
 
+    .hide {
+        display: none;
+    }
+
     .main-filter-content {
         z-index: 3;
         position: absolute;
@@ -12,6 +16,62 @@
         box-shadow: 0 0 20px 10px #ccc;
         width: 1000px;
         padding: 10px;
+
+        .footer_filter {
+            display: flex;
+            justify-content: center;
+            padding-top: 20px;
+            gap: 20px;
+
+            .bo_chon {
+                color: #dd1c1a;
+                border: 1px solid #dd1c1a;
+            }
+
+            .ket_qua {
+                background-color: #288ad6;
+                color: #fff;
+            }
+
+            button {
+                padding: 5px 10px;
+                border-radius: 3px;
+            }
+        }
+
+        .title {
+            text-align: left;
+            font-weight: 600;
+        }
+
+        .show_select_filter {
+            display: flex;
+            padding: 10px;
+
+            .show_select_filter_content {
+                display: flex;
+                gap: 15px;
+                width: 80%;
+                flex-wrap: wrap;
+                padding-left: 10px;
+
+                .button_delete {
+                    border: 1px solid #000;
+                    padding: 5px 10px;
+                    border-radius: 3px;
+
+                    i {
+                        color: #ccc;
+                    }
+                }
+
+                .button_delete_all {
+                    color: blue;
+                    display: flex;
+                    align-items: center;
+                }
+            }
+        }
 
         .close_filter {
             color: #ccc;
@@ -39,14 +99,6 @@
 
         .price_ram_rom {
             display: flex;
-
-            .title {
-                text-align: left;
-            }
-        }
-
-        .title-filter {
-            text-align: left;
         }
 
         .brand-content {
