--- a/src/pages/DTDD/filters/BrandFilter.scss
+++ b/src/pages/DTDD/filters/BrandFilter.scss
@@ -1,32 +1,57 @@
 .brand-content {
-    z-index: 3;
     position: absolute;
+    z-index: 3;
     top: 0;
     left: 0;
     background-color: #fff;
     box-shadow: 0 0 20px 10px #ccc;
-    width: 500px;
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    padding: 10px;
-}
+    width: 600px;
 
-.border-blue {
-    border: 1px solid blue !important;
-}
+    .border-blue {
+        border: 1px solid blue !important;
+    }
 
-.brand_img {
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    width: 100px;
-    height: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+    .brand_img {
+        border: 1px solid #ccc;
+        border-radius: 20px;
+        width: 100px;
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
 
-    img {
-        width: 90%;
+        img {
+            width: 90%;
+        }
+    }
+
+    .content_filter {
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        padding: 10px;
+    }
+
+    .footer_filter {
+        display: flex;
+        justify-content: center;
+        padding-top: 20px;
+        gap: 20px;
+
+        .bo_chon {
+            color: #dd1c1a;
+            border: 1px solid #dd1c1a;
+        }
+
+        .ket_qua {
+            background-color: #288ad6;
+            color: #fff;
+        }
+
+        button {
+            padding: 5px 10px;
+            border-radius: 3px;
+        }
     }
 }
